--- a/BuggyTasks/BuggyTasks.csproj
+++ b/BuggyTasks/BuggyTasks.csproj
@@ -19,6 +19,7 @@
         <SingleProject>true</SingleProject>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <MauiEnableXamlCBindingWithSourceCompilation>true</MauiEnableXamlCBindingWithSourceCompilation>
 
         <!-- Display name -->
         <ApplicationTitle>BuggyTasks</ApplicationTitle>
@@ -62,6 +63,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)"/>
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0"/>
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2"/>
     </ItemGroup>
 
 </Project>
